[package]
name = "mokumo-shop"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mokumo shop vertical — neutral shop-core primitives (customers, shops, sequences, quotes, invoices, kanban, inventory, pricing, financials)"

[dependencies]
kikan = { workspace = true }
kikan-types = { workspace = true }
mokumo-core = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = "0.1"
dashmap = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
chrono = { workspace = true }
imagesize = { workspace = true }
infer = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
sqlx = { workspace = true }
tempfile = "3"
tower = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]

[[test]]
name = "platform_bdd"
harness = false
required-features = ["bdd"]
