[package]
name = "mokumo-shop"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mokumo shop vertical — neutral shop-core primitives (customers, shops, sequences, quotes, invoices, kanban, inventory, pricing, financials)"

[dependencies]
kikan = { workspace = true }
kikan-events = { workspace = true }
kikan-types = { workspace = true }
mokumo-core = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
dashmap = { workspace = true }
futures-util = { workspace = true }
local-ip-address = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
chrono = { workspace = true }
imagesize = { workspace = true }
infer = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
password-auth = { workspace = true }
rand = { workspace = true }
sysinfo = { workspace = true }
tempfile = "3"
tower-sessions-sqlx-store = { workspace = true }
url = "2"
zip = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
sqlx = { workspace = true }
tempfile = "3"
tower = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util"] }
# The following dev-deps support the `api_bdd` harness and top-level
# integration tests. kikan-tauri is a dev-dep only — the ephemeral-bind
# steps import `try_bind_ephemeral_loopback` from there. Keeping it out
# of [dependencies] preserves I3 (headless mokumo-server has no Tauri
# transitive deps).
kikan-tauri = { workspace = true }
kikan-socket = { workspace = true }
axum-test = { workspace = true }
serial_test = { workspace = true }
insta = "1"
reqwest = { version = "0.13", features = ["json"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
bytes = "1"
http = { workspace = true }
password-auth = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
fd-lock = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]

[[test]]
name = "platform_bdd"
harness = false
required-features = ["bdd"]

[[test]]
name = "api_bdd"
harness = false
required-features = ["bdd"]
