[package]
name = "scorecard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Single crate per ADR (decisions/mokumo/adr-scorecard-crate-shape.md):
# the four-forcing-functions framework rejects a multi-crate split.
# Lib stays mokumo-deps-zero (serde + schemars + serde_json only). Binary
# tooling deps (toml/walkdir/clap/jsonschema) are feature-gated under `cli`
# so downstream `cargo add scorecard` does not pull them transitively.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }

[dev-dependencies]
trybuild = { workspace = true }
cucumber = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
cli = ["dep:toml", "dep:walkdir", "dep:clap", "dep:jsonschema"]
# `bdd` gates the cucumber-rs integration test (tests/bdd.rs). Step-defs
# under tests/bdd_world/ exercise the producer (aggregate.rs), which lives
# behind `cli`; `bdd` therefore implies `cli` so a single
#   cargo test -p scorecard --features bdd --test bdd
# is enough to run the suite.
bdd = ["cli"]

# emit-schema needs only the lib's deps (serde + schemars + serde_json) — no
# `required-features` so the drift-check workflow can run it without `--features cli`.
[[bin]]
name = "emit-schema"

# aggregate is the V1 walking-skeleton producer binary. It depends on clap +
# jsonschema (gated under `cli`) so a downstream `cargo add scorecard` does
# not pull them transitively. Build with:
#   cargo build -p scorecard --features cli --release --bin aggregate
[[bin]]
name = "aggregate"
required-features = ["cli"]

# Cucumber-rs test target (V5). `harness = false` because cucumber owns
# its own `#[tokio::main]`; `required-features = ["bdd"]` keeps the
# default `cargo test -p scorecard` lightweight (lib + trybuild +
# schema_drift) without pulling cucumber/tempfile into every run.
[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]

[lints]
workspace = true
