[package]
name = "mokumo-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
mokumo-core = { workspace = true }
kikan = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
