[package]
name = "mokumo-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mokumo-core = { workspace = true }
mokumo-db = { workspace = true }
mokumo-types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
axum-login = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
futures-util = { workspace = true }
mdns-sd = { workspace = true }
local-ip-address = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
password-auth = { workspace = true }
rpassword = { workspace = true }
thiserror = { workspace = true }

[features]
bdd = []

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
serde_json = { workspace = true }
axum-test = { workspace = true }
cucumber = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
