[package]
name = "mokumo-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mokumo-core = { workspace = true }
mokumo-db = { workspace = true }
mokumo-types = { workspace = true }
kikan = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rust-embed = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
axum-login = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
futures-util = { workspace = true }
mdns-sd = { workspace = true }
local-ip-address = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
password-auth = { workspace = true }
rpassword = { workspace = true }
thiserror = { workspace = true }
fd-lock = { workspace = true }
parking_lot = { workspace = true }
tempfile = "3"
url = "2"
zip = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "9", features = ["build", "cargo", "rustc"] }

[features]
bdd = []

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3"
reqwest = { version = "0.13", features = ["json"] }
tower = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
axum-test = { workspace = true }
cucumber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
password-auth = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
insta = "1"

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
