[package]
name = "docs-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "docs-gen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
