[package]
name = "docs-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "docs-gen"
path = "src/main.rs"

[[bin]]
name = "adr-validate"
path = "src/bin/adr-validate.rs"

[[bin]]
name = "lcov-dedup"
path = "src/bin/lcov-dedup.rs"

[dependencies]
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
