[package]
name = "docs-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "docs-gen"
path = "src/main.rs"

[[bin]]
name = "adr-validate"
path = "src/bin/adr-validate.rs"

[[bin]]
name = "lcov-dedup"
path = "src/bin/lcov-dedup.rs"

[[bin]]
name = "coverage-breakouts"
path = "src/bin/coverage-breakouts.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
syn = { workspace = true }
# `span-locations` enables `Span::start().line` so the route walker can
# annotate findings with 1-based source line numbers. Without this feature
# proc-macro2's `LineColumn` reports `(0, 0)` and diagnostics lose their
# pointer back to the offending `.route()` call.
proc-macro2 = { version = "1", features = ["span-locations"] }
rustc-demangle = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
